[gd_scene load_steps=6 format=3 uid="uid://b3y1ygrrhk33m"]

[ext_resource type="Script" path="res://tiny_wizard/gui/inventory_ui/inventory_ui.gd" id="1_41nm0"]
[ext_resource type="Resource" uid="uid://bpvgw7v25bbsx" path="res://tiny_wizard/player/inventory/inventory.tres" id="2_6tb0s"]
[ext_resource type="Texture2D" uid="uid://c6vl0yob8my3a" path="res://tiny_wizard/assets/placeholder_art/gui/coin.png" id="3_x7efp"]
[ext_resource type="Texture2D" uid="uid://chbho40yhsnh2" path="res://tiny_wizard/assets/placeholder_art/gui/bomb_icon.png" id="4_ojjo4"]
[ext_resource type="Texture2D" uid="uid://ci6cja7ducgee" path="res://tiny_wizard/assets/placeholder_art/gui/key.png" id="5_skni8"]

[node name="InventoryUI" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_41nm0")
inventory = ExtResource("2_6tb0s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Coins" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CoinsCount" type="Label" parent="VBoxContainer/Coins"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="CoinsIcon" type="TextureRect" parent="VBoxContainer/Coins"]
layout_mode = 2
texture = ExtResource("3_x7efp")
stretch_mode = 3

[node name="Bombs" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BombsCount" type="Label" parent="VBoxContainer/Bombs"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="BombsIcon" type="TextureRect" parent="VBoxContainer/Bombs"]
layout_mode = 2
texture = ExtResource("4_ojjo4")
stretch_mode = 3

[node name="Keys" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="KeysCount" type="Label" parent="VBoxContainer/Keys"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"

[node name="KeysIcon" type="TextureRect" parent="VBoxContainer/Keys"]
layout_mode = 2
texture = ExtResource("5_skni8")
stretch_mode = 3
